<resources>
    <string name="app_name">Padi Care</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="image_for_user_photo">Image for user photo</string>
    <string name="welcome">Welcome Back,</string>
    <string name="username">Username</string>
    <string name="search_button">search button</string>
    <string name="profile">Profile</string>
    <string name="title_forum">Forum</string>
    <string name="email">emailuser@example.com</string>
    <string name="menu_name">Menu</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="about_us_title">About us</string>
    <string name="log_out_title">Log out</string>
    <string name="button_add_post">Button add post</string>
    <string name="logo_app">Logo app</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_title">Login</string>
    <string name="result_definisi">Penyakit hawar daun bakteri (HDB) merupakan salah satu penyakit pada tanamam padi. Penyakit ini disebabkan oleh bakteri Xanthomonas oryzae pv. oryzae (Xoo). Patogen ini dapat mengenfeksi tanaman padi pada semua fase pertumbuhan tanaman dari mulai pesemaian sampai menjelang panen.</string>
    <string name="definisi">Definisi</string>
    <string name="result_title">Penyakit Hawar Daun Bakteri (HDB)</string>
    <string name="result_solusi">Donec sodales metus sed tempor lobortis. Praesent ornare orci eu vulputate pretium. Vivamus accumsan nisl urna, quis viverra diam aliquam eu. Sed porta sed dolor id porttitor. Proin tristique, orci a mollis mollis, purus risus egestas leo, a bibendum sem nunc nec sem. Aenean sollicitudin nec dui non hendrerit. Mauris fermentum nulla ex, sit amet pellentesque odio fringilla fermentum. Donec sodales metus sed tempor lobortis. Praesent ornare orci eu vulputate pretium. Vivamus accumsan nisl urna, quis viverra diam aliquam eu. Sed porta sed dolor id porttitor. Proin tristique, orci a mollis mollis, purus risus egestas leo, a bibendum sem nunc nec sem. Aenean sollicitudin nec dui non hendrerit. Mauris fermentum nulla ex, sit amet pellentesque odio fringilla fermentum.</string>
    <string name="solusi">Solusi</string>
    <string name="title_result">Result</string>
    <string name="post_body">Berikut cara mengatasi penyakti hawar daun bakteri Donec sodales metus sed tempor lobortis. Praesent ornare orci eu vulputate pretium. Vivamus accumsan nisl urna, quis viverra diam aliquam eu. Sed porta sed dolor id porttitor. Proin tristique, orci a mollis mollis, purus risus egestas leo, a bibendum sem nunc nec sem. Aenean sollicitudin nec dui non hendrerit. Mauris fermentum nulla ex, sit amet pellentesque odio fringilla fermentum. Donec sodales metus sed tempor lobortis. Praesent ornare orci eu vulputate pretium. Vivamus accumsan nisl urna, quis viverra diam aliquam eu. Sed porta sed dolor id porttitor. Proin tristique, orci a mollis mollis, purus risus egestas leo, a bibendum sem nunc nec sem. Aenean sollicitudin nec dui non hendrerit. Mauris fermentum nulla ex, sit amet pellentesque odio fringilla fermentum.</string>
    <string name="post_author">Farhan Adi,</string>
    <string name="post_time">18:30</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="change_image_button">Change Picture</string>
    <string name="back_button">Back button</string>
    <string name="profile_image">profile image</string>
    <string name="name_label">Name</string>
    <string name="name_hint">Masukkan Nama</string>
    <string name="email_hint">Masukkan Email</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="phone_number_hint">Masukkan Nomor Telepon</string>
    <string name="password_hint">Masukkan Password</string>
    <string name="fullname_label">Fullname</string>
    <string name="phone_label">Phone Number</string>
    <string name="register_title">Register</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="email_required">Username or email is required</string>
    <string name="password_required">Password is required!</string>
    <string name="error_password_8">Password must be 8 characters or more</string>
    <string name="title_label">Title</string>
    <string name="desc_field">Description</string>
    <string name="upload_btn">Post</string>
    <string name="logo_image">Image post</string>
    <string name="fullname_required">Fullname is required!</string>
    <string name="username_required">Username is required!</string>
    <string name="account_q">already have an account?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_y">Don\'t have an account yet?</string>
    <string name="tit1le_post">Title Post</string>
    <string name="sample_text">sample text for thumbnail post</string>
    <string name="sample_date">20 sep 2023</string>
    <string name="retry">Retry</string>
    <string name="desc_required">Description is required!</string>
    <string name="title_required">Title post is required!</string>
    <string name="img_required">Image post is required</string>
    <string name="success">Success</string>
    <string name="sample_comment">Sample Comment</string>
    <string name="type_your_commnet">Tuliskan komentar anda</string>
    <string name="button_comment">Button for send commnet</string>
    <string name="comment_alert">Anda belum memasukan komen!</string>
    <string name="button_back">Button Back</string>
    <string name="photo_profile">Photo profile</string>
    <string name="name_alert">Mohon masukkan nama!</string>
    <string name="title_add_post">Create Post</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="email_username">Email or Username</string>
    <string name="scan_penyakit_padi">Scan Penyakit Padi</string>
    <string name="search">Search : </string>
</resources>