<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.result.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_gravity="center_vertical"
                android:paddingStart="30dp"
                android:contentDescription="@string/back_button"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/title_result"

                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

        </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:paddingTop="20dp"
        android:paddingHorizontal="32dp"
        android:paddingBottom="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"/>

    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@+id/result_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="center"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="32dp"
        android:src="@drawable/hawar_daun_bakteri"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@+id/result_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/definisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/definisi"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/divider2"
        app:layout_constraintTop_toBottomOf="@id/divider2"/>

    <TextView
        android:id="@+id/result_definisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:justificationMode="inter_word"
        android:text="@string/result_definisi"
        android:textSize="15sp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintTop_toBottomOf="@id/definisi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#CCCCCC"
        android:layout_marginTop="15sp"
        app:layout_constraintTop_toBottomOf="@+id/result_definisi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/solusi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solusi"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/divider3"
        app:layout_constraintTop_toBottomOf="@id/divider3"/>

    <TextView
        android:id="@+id/result_solusi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="50dp"
        android:justificationMode="inter_word"
        android:text="@string/result_solusi"
        android:textSize="15sp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        app:layout_constraintTop_toBottomOf="@id/solusi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>