<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginVertical="16dp"
            android:src="@drawable/user"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/username"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/user_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="10sp"
            android:text="@string/sample_date"
            app:layout_constraintStart_toEndOf="@+id/user_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_username" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="200dp"
            app:srcCompat="@drawable/hawar_daun_bakteri"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/user_image" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tit1le_post"
            android:paddingHorizontal="16dp"
            android:textStyle="bold"
            android:paddingVertical="4dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/postImage" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:text="@string/sample_text"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
