<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/image_for_user_photo"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@+id/user_image"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menu_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/user_image">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="35dp"
            android:text="@string/edit_profile_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="35dp"
            app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menu_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/menu_edit_profile"
        tools:layout_editor_absoluteX="-16dp">

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="35dp"
            android:text="@string/about_us_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="35dp"
            app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/menu_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@+id/menu_about_us"
        tools:layout_editor_absoluteX="-16dp">
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="35dp"
            android:text="@string/log_out_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_marginVertical="20dp"
            android:layout_marginEnd="35dp"
            app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>