<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.result.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_gravity="center_vertical"
                android:paddingLeft="30dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/title_forum"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#12121D"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_title"
            android:paddingTop="20dp"
            android:paddingBottom="1dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"/>

        <TextView
            android:id="@+id/post_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_author"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/post_title"
            app:layout_constraintTop_toBottomOf="@+id/post_title"/>

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/post_time"
            android:textSize="12sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/post_author"
            app:layout_constraintTop_toBottomOf="@+id/post_title"/>

        <View
            android:id="@+id/divider"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:layout_marginTop="22dp"
            android:background="#CCCCCC"
            app:layout_constraintTop_toBottomOf="@+id/post_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="350dp"
            android:layout_height="169dp"
            android:scaleType="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/hawar_daun_bakteri"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="350dp"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/post_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/post_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingBottom="50dp"
            android:justificationMode="inter_word"
            android:text="@string/post_body"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>